<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".receptor_datos">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="599dp"
        android:drawableLeft="@drawable/flecha"
        android:onClick="regreso"
        android:text="@string/regresar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="34dp"
        android:text="@string/titulo1" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="123dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text" />

    <EditText
        android:id="@+id/cargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/cargo"
        android:inputType="text" />

    <EditText
        android:id="@+id/sueldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="285dp"
        android:ems="10"
        android:hint="@string/sueldo"
        android:inputType="text" />

    <EditText
        android:id="@+id/dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="338dp"
        android:ems="10"
        android:hint="@string/dia"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="268dp"
        android:text="@string/chec1" />

    <CheckBox
        android:id="@+id/check2"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="267dp"
        android:text="@string/chec2" />

    <CheckBox
        android:id="@+id/check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="81dp"
        android:layout_marginBottom="209dp"
        android:text="@string/chec3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="83dp"
        android:onClick="liquidacion"
        android:text="@string/btn_1" />

</RelativeLayout>